--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
 							<br />
 							<a href="http://twitter.com/natenatenate">@natenatenate</a>
 							<br />
-							<a href="#">Idaho Library Association 2015</a>
+							<a href="http://uny.sla.org/upcoming-events">UNYSLA</a>
 						</small>
 					</p>
 					<p>
-						<small>presentation: <a href="http://natehill.net/idaho">http://natehill.net/idaho</a></small>
+						<small>presentation: <a href="http://natehill.net/syracuse">http://natehill.net/syracuse</a></small>
 					</p>
 				</section>
 
