--- a/index.html
+++ b/index.html
@@ -286,18 +286,17 @@
 					</section>
 
 <section>
-					<h2>Thanks Idaho!!!</h2>
+					<h2>Thanks!!!</h2>
 					<p>
 						<small>
 							<a href="http://natehill.net">Nate Hill</a>
 							<br />
 							<a href="http://twitter.com/natenatenate">@natenatenate</a>
 							<br />
-							<a href="#">Idaho Library Association 2015</a>
 						</small>
 					</p>
 					<p>
-						<small>presentation: <a href="http://natehill.net/idaho">http://natehill.net/idaho</a></small>
+						<small>presentation: <a href="http://natehill.net/syracuse">http://natehill.net/syracuse</a></small>
 					</p>
 				</section>
 
