--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 <section>
-					<h2>Facilitating Innovation</h2>
+					<h2>Facilitating Innovation / Managing Change</h2>
 					<p>
 						<small>
 							<a href="http://natehill.net">Nate Hill</a>
@@ -56,12 +56,6 @@
 					</p>
 				</section>
 
-
-
-
-				<section>
-					<h2>The ol' switcheroo</h2>
-				</section>
 
 				<section>
 					<p><a href="https://www.flickr.com/photos/chattlibrary/sets/72157631269756074/">How I did this at my old job</a></p>
