--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
 							<br />
 							<a href="http://twitter.com/natenatenate">@natenatenate</a>
 							<br />
-							<a href="http://uny.sla.org/upcoming-events">IL2015</a>
+							<a href="http://internet-librarian.infotoday.com/2015/Sessions/W3-Creative-Making-Day-Makerspaces-Idea-Labs-andamp-Hackerspaces-8799.aspx">IL2015</a>
 						</small>
 					</p>
 					<p>
-						<small>presentation: <a href="http://internet-librarian.infotoday.com/2015/Sessions/W3-Creative-Making-Day-Makerspaces-Idea-Labs-andamp-Hackerspaces-8799.aspx">http://natehill.net/IL2015</a></small>
+						<small>presentation: <a href="http://natehill.net/IL2015">http://natehill.net/IL2015</a></small>
 					</p>
 				</section>
 
@@ -288,7 +288,7 @@
 						</small>
 					</p>
 					<p>
-						<small>presentation: <a href="http://natehill.net/syracuse">http://natehill.net/syracuse</a></small>
+						<small>presentation: <a href="http://natehill.net/IL2015">http://natehill.net/IL2015</a></small>
 					</p>
 				</section>
 
