--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
 							<br />
 							<a href="http://twitter.com/natenatenate">@natenatenate</a>
 							<br />
-							<a href="http://internet-librarian.infotoday.com/2015/Sessions/W3-Creative-Making-Day-Makerspaces-Idea-Labs-andamp-Hackerspaces-8799.aspx">IL2015</a>
+							<a href="">MCLS ETC Conference</a>
 						</small>
 					</p>
 					<p>
-						<small>presentation: <a href="http://natehill.net/IL2015">http://natehill.net/IL2015</a></small>
+						<small>presentation: <a href="http://natehill.net/rochester">http://natehill.net/rochester</a></small>
 					</p>
 				</section>
 
@@ -284,11 +284,11 @@
 							<br />
 							<a href="http://twitter.com/natenatenate">@natenatenate</a>
 							<br />
-							<a href="http://internet-librarian.infotoday.com/2015/Sessions/W3-Creative-Making-Day-Makerspaces-Idea-Labs-andamp-Hackerspaces-8799.aspx">IL2015</a>
+							<a href="">MCLS ETC Conference</a>
 						</small>
 					</p>
 					<p>
-						<small>presentation: <a href="http://natehill.net/IL2015">http://natehill.net/IL2015</a></small>
+						<small>presentation: <a href="http://natehill.net/rochester">http://natehill.net/rochester</a></small>
 					</p>
 				</section>
 
